la til en boks og en id til alle boksene

--- a/index.html
+++ b/index.html
@@ -19,25 +19,29 @@
         </section>
     
         <section class="container">
-            <section class="section">
+            <section id="overskrift" class="section">
                 <h1>Velkommen til Scrollytelling</h1>
                 <p class="text-p">Rull nedover for å oppleve historien.</p>
             </section>
-            <section id="nr2" class="section">
+            <section id="nr1" class="section">
                 <h1>Kapittel 1</h1>
                 <p class="text-p">En dag skjedde noe uventet...</p>
             </section>
-            <section class="section">
+            <section id="nr2" class="section">
                 <h1>Kapittel 2</h1>
                 <p class="text-p">Spennende hendelser utfoldet seg.</p>
             </section>
-            <section class="section">
+            <section id="nr3" class="section">
                 <h1>Kapittel 3</h1>
                 <p class="text-p">flere Spennende hendelser utfoldet seg.</p>
             </section>
-            <section class="section">
+            <section id="nr4" class="section">
                 <h1>Kapittel 4</h1>
                 <p class="text-p">Historien nærmet seg sin konklusjon...</p>
+            </section>
+            <section id="nr5" class="section">
+                <h1>Kapittel 5</h1>
+                <p class="text-p">Historien kommer til en konklusjon</p>
             </section>
         </section>
     </main>
