La til tekst og 2 kapittler

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Velkommen til Virkeligheten</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
@@ -25,23 +25,35 @@
             </section>
             <section id="nr1" class="section">
                 <h1>Kapittel 1</h1>
-                <p class="text-p">En dag skjedde noe uventet...</p>
+                <p class="text-p">Det var en helt vanlig dag for en helt vanlig ungdom. 
+
+                    Roger var på fest og hadde det gøy. </p>
             </section>
             <section id="nr2" class="section">
                 <h1>Kapittel 2</h1>
-                <p class="text-p">Spennende hendelser utfoldet seg.</p>
+                <p class="text-p">En av vennene hans kom bort og tilbydde han VR-briller.  </p>
             </section>
             <section id="nr3" class="section">
                 <h1>Kapittel 3</h1>
-                <p class="text-p">flere Spennende hendelser utfoldet seg.</p>
+                <p class="text-p">Da han tok de på følte han at han kom til en helt annen verden. Han følte at han svevde og at alt plutselig ble bra. </p>
             </section>
             <section id="nr4" class="section">
                 <h1>Kapittel 4</h1>
-                <p class="text-p">Historien nærmet seg sin konklusjon...</p>
+                <p class="text-p">De som var på festen kastet han ut fordi han ble plutselig sur og slo noen.</p>
             </section>
             <section id="nr5" class="section">
                 <h1>Kapittel 5</h1>
-                <p class="text-p">Historien kommer til en konklusjon</p>
+                <p class="text-p">Han satte seg i bilen for å kjøre hjem. Imens han kjørte trodde han at han kjørte i fartsgrensa, men i realiteten kjørte han i 80gkm/t. </p>
+            </section>
+            <section id="nr6" class="section">
+                <h1>Kapittel 6</h1>
+                <p class="text-p">Han begynte miste kontrollen og krasjet og kjørte av veien. Roger ble hardt skadd, men kom seg ut av bilen før den begynte å brenne. </p>
+            </section>
+            <section id="nr7" class="section">
+                <h1>Kapittel 7</h1>
+                <p class="text-p">Denne historien handlet ikke om VR-briller.
+                    Ikke kjør beruset. 
+                    Velkommen til virkeligheten.  </p>
             </section>
         </section>
     </main>
