la til farge på Velkommen tik virkeligheten

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <p><strong>Velkommen til virkeligheten</strong></p>
+                <p> <strong> <color class="color-gray">Velkommen</color> <color class="color-black">til </color><color class="color-red">virkeligheten.</color></strong></p>
             </div>
         </nav>
     </header>
@@ -46,7 +46,7 @@
             <section id="section-bottom" class="section">
                 <p class="text-p">Denne historien handlet ikke om VR-briller.
                     Ikke kjør beruset. <br><br>
-                    <strong>Velkommen til virkeligheten.</strong>  </p>
+                    <strong> <color class="color-gray">Velkommen</color> <color class="color-black">til </color><color class="color-red">virkeligheten.</color></strong>  </p>
             </section>
         </section>
     </main>
